--- a/style.css
+++ b/style.css
@@ -5,12 +5,19 @@
     font-family: 'Commissioner', sans-serif;
 }
 
+body {
+    background: #EFEFEF;
+    width: 100%;
+    height: auto;
+    padding-bottom: 200px;
+}
+
 header img {
-    width: 100vw;
+    width: 100%;
 }
 
 .header {
-    width: 100vw;
+    width: 100%;
     height: 80px;
     padding: 60px;
     background: transparent;
@@ -37,44 +44,42 @@ ul li {
 }
 
 header {
-    width: 100vw;
-    position: relative;
+    width: 100%;
     height: 300px;
     margin: 0;
-    position: relative;
 }
 
 .container {
+    height: auto;
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%)
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 200px;
 }
 
 .logo-mastercraft {
     position: absolute;
-    top:42%;
+    top: 1%;
     left:50%;
     transform: translate(-50%, -50%)
 }
 
-.introduction {
+.box {
     background: white;
     width: 700px;
-    padding: 50px;
-    margin-top: 200px;
+    padding: 40px 30px 20px 30px;
     border-radius: 10px;
-    border: 1px solid #EFEFEF;
+    border: 1px solid #E6E5E5;
     text-align: center;
+    margin-top: 20px; 
 }
 
-.introduction h2 {
+.box h2 {
     margin: 10px;
-    font-size: 25px;
-    
+    font-size: 25px;   
 }
 
-.introduction p {
+.box p {
     font-size: 14px;
     color: #8B8989;
 }
@@ -90,13 +95,13 @@ header {
     border: 0;
     border-radius: 20px;
     height: 50px;
-    cursor: pointer;
 }
 
-.backProject {
+.backProjectBtn {
     background: hsl(176, 50%, 47%);
     color: white;
     width: 200px;
+    cursor: pointer;
 }
 
 .bookmark-img {
@@ -105,11 +110,90 @@ header {
     margin-right:10px;
 }
 
-.bookmark {
+.bookmarkBtn {
     background: #EFEFEF;
     color: #8B8989;
     display: flex;
     align-items: center;
     justify-content: start;
+    width: 150px;
+    cursor: pointer;
+}
+
+.analytics {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.analytics span {
+    
+    padding: 50px;
+}
+
+.line {
+    border-right: 2px solid #E6E5E5;
+}
+
+.progress {
+    width: 550px;
+    height: 15px;
+    border-radius: 15px;
+    background-color: hsl(176, 50%, 47%);
+}
+
+.about {
+    text-align: left;
+}
+
+.about p {
+    margin-top: 30px;
+    font-size: 16px;
+    line-height: 30px;
+}
+
+.inDiv {
+    width: 600px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex h1 {
+    margin-right: 5px;
+}
+
+.inDiv span {
+    font-weight: bold;
+    color: hsl(176, 50%, 47%);
+}
+
+.inDiv p {
+    text-align: left;
+    font-size: 15px;
+    margin-bottom: 20px;
+}
+
+.selectBtn {
+    background: hsl(176, 50%, 47%);
+    color: white;
+    width: 150px;
+    cursor: pointer;
+}
+
+.out {
+    color: hsl(0, 0%, 48%);
+}
+
+.out span {
+    color: hsl(0, 0%, 48%);
+}
+
+.outBtn {
+    background-color: hsl(0, 0%, 48%);
+    color: white;
     width: 150px;
 }
