--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,13 @@ body {
     background: #EFEFEF;
     width: 100%;
     height: auto;
-    padding-bottom: 200px;
 }
 
-header img {
+header {
     width: 100%;
+    height: 300px;
+    background-image: url('../images/image-hero-desktop.jpg');
+    margin: 0;
 }
 
 .header {
@@ -33,6 +35,14 @@ header img {
     margin-left: 100px;
 }
 
+.menu-mobile {
+    display: none;
+}
+
+.menu-mobile img {
+    cursor: pointer;
+}
+
 ul {
     display: flex;
     list-style: none;
@@ -43,18 +53,13 @@ ul li {
     color: white;
 }
 
-header {
-    width: 100%;
-    height: 300px;
-    margin: 0;
-}
-
 .container {
     height: auto;
     position: absolute;
+    top: 25%;
     left: 50%;
     transform: translateX(-50%);
-    margin-bottom: 200px;
+    /* margin-bottom: 200px; */
 }
 
 .logo-mastercraft {
@@ -66,7 +71,7 @@ header {
 
 .box {
     background: white;
-    width: 700px;
+    width: 100%;
     padding: 40px 30px 20px 30px;
     border-radius: 10px;
     border: 1px solid #E6E5E5;
@@ -120,6 +125,10 @@ header {
     cursor: pointer;
 }
 
+.bookmarkBtn-mobile {
+    display: none;
+}
+
 .analytics {
     display: flex;
     align-items: center;
@@ -162,7 +171,13 @@ header {
     align-items: center;
 }
 
-.flex h1 {
+.flex2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex2 h1 {
     margin-right: 5px;
 }
 
@@ -185,15 +200,154 @@ header {
 }
 
 .out {
-    color: hsl(0, 0%, 48%);
+    opacity: .5;
 }
 
-.out span {
+/* .out {
     color: hsl(0, 0%, 48%);
-}
+} */
 
 .outBtn {
     background-color: hsl(0, 0%, 48%);
     color: white;
     width: 150px;
+} 
+
+@media (max-width: 720px) {
+    header {
+        width: 100%;
+        height: 300px;
+        background-image: url('../images/image-hero-mobile.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin: 0;
+    }
+
+    .header {
+        padding: 20px;
+    }
+
+    .logo {
+        margin-left: 0;
+    }
+    
+    .menu {
+        display: none;
+    }
+
+    .menu-mobile {
+        display: block;
+    }
+
+    .container {
+        width: 90%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .logo-mastercraft {
+        top: 0;
+    }
+
+    .box {
+        width: 100%;
+        margin-top: 0; 
+        margin-bottom: 20px; 
+
+        padding: 30px 25px 15px 25px;
+    }
+    
+    .box h2 {
+        margin: 5px;
+        font-size: 22px;   
+    }
+    
+    .box p {
+        font-size: 12px;
+    }
+
+    .buttons-container {
+        margin: 25px;
+        justify-content: center;
+    }
+
+    .bookmark-img {
+        margin: 0;
+    }
+
+    .bookmarkBtn {
+       display: none;
+    }
+
+    .bookmarkBtn-mobile {
+        display: block;
+       margin-left: 5px;
+    }
+
+    .analytics {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .analytics span {
+        padding: 10px;
+    }
+
+    .line {
+        border-right: 0;
+        border-bottom: 2px solid #E6E5E5;
+    }
+
+    .line h1 {
+        font: 10px;
+    }
+
+    .line p {
+        font-size: 12px;
+        margin: 5px;
+    }
+    
+    .progress {
+        width: 200px;
+        margin: 10px
+    }
+
+    .about p {
+        margin-top: 15px 0;
+        font-size: 14px;
+        line-height: 30px;
+    }
+    
+    .inDiv {
+        width: 100%;
+    }
+
+    .inDiv p {
+        margin-bottom: 15px;
+    }
+    
+    .flex {
+        align-items: flex-start;
+        flex-direction: column;
+    }
+    
+    .flex h3 {
+        font-size: 14px;
+    }
+
+    .flex span {
+        font-size: 14px;
+    }
+
+    .flex2 {
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-width: 280px) {
+    .logo {
+        width: 80px;
+    }
 }
