--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ header {
     margin: 0;
 }
 
-.header {
+.header-wrapper {
     width: 100%;
     height: 80px;
     padding: 60px;
@@ -52,17 +52,19 @@ header {
 }
 
 .menu-mobile-list {
-    background: white;
+    background: black;
     width: 300px;
     position: absolute;
-    right: 10px;
-    top: 50px;
+    right: 50px;
+    top: 80px;
     display: none;
+    z-index: 100000;
 }
 
 .menu-mobile-list li {
     padding: 10px;
     text-align: center;
+    color: #fff;
     border-bottom: 1px solid hsl(0, 0%, 48%);
     list-style: none;
 }
@@ -87,7 +89,7 @@ header {
     transform: translate(-50%, -50%)
 }
 
-.box {
+.box, #box1, #box2, #box3 {
     background: white;
     width: 100%;
     padding: 40px 30px 20px 30px;
@@ -105,6 +107,7 @@ header {
 .box p {
     font-size: 14px;
     color: #8B8989;
+    text-align: left;
 }
 
 .buttons-container {
@@ -203,7 +206,7 @@ header {
     margin-right: 5px;
 }
 
-.inDiv span {
+.pledge {
     font-weight: bold;
     color: hsl(176, 50%, 47%);
 }
@@ -229,15 +232,94 @@ header {
     opacity: .5;
 }
 
-/* .out {
-    color: hsl(0, 0%, 48%);
-} */
-
 .outBtn {
     background-color: hsl(0, 0%, 48%);
     color: white;
     width: 150px;
+    cursor: not-allowed;
 } 
+
+.modalBackThisProject {
+    display: none;
+    position: fixed; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.content {
+    background-color: #fff;
+  margin: 15% auto;
+  padding: 30px;
+  border: 1px solid #888;
+  width: 50%; 
+}
+
+.closeModal {
+    margin-left: 98%;
+    cursor: pointer;
+}
+
+.content p {
+    color: #8B8989;
+    margin: 25px 0;
+}
+
+.optionTitle {
+    text-align: left;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 0 10px;
+}
+
+.optionTitle:hover {
+    color: hsl(176, 50%, 47%);
+}
+
+.flexTitle {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+#div1, #div2, #div3 {
+    display: none;
+    border-top: 1px solid #E6E5E5;
+    width: 100%;
+    /* display: flex; */
+    align-items: center;
+    justify-content: space-between;
+}
+
+.continueBtn {
+    background: hsl(176, 50%, 47%);
+    color: white;
+    width: 100px;
+    cursor: pointer;
+}
+
+.buttons-container div {
+    width: 80px;
+    height: 50px;
+    border-radius: 20px;
+    border: 1px solid #E6E5E5;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttons-container input {
+    border: 0;
+    width: 60px;
+    padding: 5px;
+}
+
 
 @media (max-width: 720px) {
     header {
