--- a/styles/style.css
+++ b/styles/style.css
@@ -52,21 +52,28 @@ header {
 }
 
 .menu-mobile-list {
-    background: black;
+    background: white;
     width: 300px;
     position: absolute;
     right: 50px;
     top: 80px;
     display: none;
     z-index: 100000;
+    border-radius: 5px;
 }
 
 .menu-mobile-list li {
     padding: 10px;
-    text-align: center;
-    color: #fff;
-    border-bottom: 1px solid hsl(0, 0%, 48%);
+    text-align: left;
+    color: black;
+    font-weight: 700;
+    line-height: 50px;
+    border-bottom: 1px solid #8B8989;
     list-style: none;
+}
+
+li:last-child {
+    border-bottom: none;
 }
 
 .menu-mobile-list li:hover {
@@ -89,7 +96,7 @@ header {
     transform: translate(-50%, -50%)
 }
 
-.box, #box1, #box2, #box3 {
+.box {
     background: white;
     width: 100%;
     padding: 40px 30px 20px 30px;
@@ -248,16 +255,16 @@ header {
     width: 100vw;
     height: 100vh;
     overflow: auto; 
-    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
 
 .content {
     background-color: #fff;
-  margin: 15% auto;
-  padding: 30px;
-  border: 1px solid #888;
-  width: 50%; 
+    margin: 15% auto;
+    padding: 30px;
+    border: 1px solid #888;
+    width: 50%; 
+    border-radius: 5px;
 }
 
 .closeModal {
@@ -270,6 +277,12 @@ header {
     margin: 25px 0;
 }
 
+.flexTitle {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
 .optionTitle {
     text-align: left;
     font-weight: bold;
@@ -279,12 +292,6 @@ header {
 
 .optionTitle:hover {
     color: hsl(176, 50%, 47%);
-}
-
-.flexTitle {
-    display: flex;
-    justify-content: left;
-    align-items: center;
 }
 
 #div1, #div2, #div3 {
@@ -303,7 +310,14 @@ header {
     cursor: pointer;
 }
 
-.buttons-container div {
+.buttons-containerModal {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px;
+}
+
+.buttons-containerModal div {
     width: 80px;
     height: 50px;
     border-radius: 20px;
@@ -314,10 +328,85 @@ header {
     justify-content: center;
 }
 
-.buttons-container input {
+.buttons-containerModal input {
     border: 0;
     width: 60px;
     padding: 5px;
+}
+
+.modalThanksForYourSupport {
+    display: none;
+    position: fixed; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.4);
+}
+
+.contentModal2 {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 30px;
+    border: 1px solid #888;
+    border-radius: 5px;
+    width: 40%; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modalContainer {
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+
+.modalContainer h1 {
+    font-size:24px;
+}
+
+.modalContainer p {
+    text-align: center;
+    width: 450px;
+    color: #8B8989;
+    font-size: 16px;
+    line-height: 25px;
+}
+
+.gotItBtn {
+    background: hsl(176, 50%, 47%);
+    color: white;
+    width: 100px;
+    cursor: pointer;
+    font-weight: 700;
+}
+
+.gotItBtn:hover {
+    background: hsl(176, 72%, 28%);
+}
+
+@media (max-width: 768px) {
+    .contentModal2 {
+        width: 70%;
+        height: 400px;
+        padding: 10px;
+        
+    }
+
+    .modalContainer {
+        height: 350px;
+        justify-content: space-between;
+    }
+    
+    .modalContainer h1 {
+        font-size: 16px;
+    }
 }
 
 
@@ -450,6 +539,26 @@ header {
     .flex2 {
         margin-bottom: 15px;
     }
+
+    #div1, #div2, #div3 {
+        flex-direction: column;
+    }
+
+    .content {
+        width: 80%;
+    }
+
+    .modalContainer {
+        width: 200px;
+    }
+
+    .modalContainer p {
+        width: 200px;
+    }
+
+    
+
+
 }
 
 @media (max-width: 280px) {
